package exception;


public class NameError extends RuntimeException {
    public NameError(String message) {
        super(message);
    }

}

