package humans;

public class President extends Human {
    public President(String name) {
        super(name);
    }
}
