package intefaces;

public interface Seen {
    void see();
    void see(String what);
}
